--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+
+
 }
 
 .logo {
@@ -9,11 +14,20 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  /* gap: 16px; */
+  margin-top: 28px;
+  margin-left: 8px;
+  margin-right: 10px;
+  gap: 8px;
+  padding-left: 0;
 }
 
 a {
