--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,60 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 0;
+  
+}
+
+.footer {
+  background-color: #eeeeee;
+  
+}
+
+.content {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.header .left-links,
+.header .right-links {
+  display: flex;
+  gap: 16px;
+  margin-right: 16px;
+  margin-left: -16px;
+  
+  
+}
+
+.footer .left-links,
+.footer .right-links {
+  display: flex;
+  margin-right: 16px;
+  margin-left: -16px;
+  gap: 16px;
+}
+
+button {
+  padding: 8px;
+  
+}
+
+
